#151407 attempt detecting the javadoc root in repository javadoc jars